# onpu_multithreading

./: CMakeLists.txt  main.cpp
Task11/: Task11.cpp  Task11.h
Task16/: Task16.cpp  Task16.h
Task17/: Task17.cpp  Task17.h
Task21/: Task21.cpp  Task21.h
Task25/: Task25.cpp  Task25.h
Task27/: Task27.cpp  Task27.h
Task29/: Task29.cpp  Task29.h
Task3/: Task3.cpp  Task3.h
Task30/: Task30.cpp  Task30.h
Task6/: Task6.cpp  Task6.h
Task8/: Task8.cpp  Task8.h
